src/snapshots/fuzz_crash/fuzz_crash_004.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
F
~~~PROBLEMS
MISSING HEADER

The module header is missing.

F
Note: This is a parse error. Check your syntax.
~~~TOKENS
UpperIdent(1:1-1:2),EndOfFile(1:2-1:2),
~~~PARSE
(file (1:1-1:2)
	(malformed_header (1:1-1:2) "missing_header")
	(statements))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END